# TennisVideoWizard

./: .gitignore  README.md  animals_cls3.yaml  cls2_tennis.yaml  cls3_animal.yaml  justfile  pyproject.toml  requirements.txt  yolo_class_ab.yaml
.devcontainer/: Dockerfile  devcontainer.json
annotation_scripts/: example.mov.json  refine_annotation.py
annotation_scripts/detect_players_yolo/: yolo.py
annotation_scripts/ffmpeg_cut_video/: extract_seg1.bat  extract_seg2.bat  extract_seg3.bat
annotation_scripts/ffmpeg_extract_frames_fps/: extract_frames.bat
notebooks/: test.ipynb
src/: main.py
src/frame_classifier/: resnet_classifier.py  test_animals_model.ipynb  test_model.ipynb  train.py  utils.py
src/yolo_detector/: yolo_class_ab.yaml  yolo_class_ab_train.py  yolo_gen_label.py
